# python-project-83

./: .gitignore  Makefile  README.md  app.py  database.py  postgres.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  delpoy_branch_to_dev.yml  deploy_branch_to_dev.yml  manual_deploy.yml  merge_dev_and_deploy_to_prod.yml
app/: app.py  views.py
migrations/: database.sql
page_analyzer/: app.py
templates/: index.html
tests/: test_page_analyzer.py
